update to latest

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 output/
 models/lightning_logs/
 notebooks/lightning_logs/
+models/skl-models/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
